gccida/c1/alias_sets_conflict_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:714:1: error: unknown type name 'alias_set_entry_0'; did you mean 'alias_set_entry'?
alias_set_entry_0 alias_set_entry; // rax 
^~~~~~~~~~~~~~~~~
alias_set_entry
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:87:4: note: 'alias_set_entry' declared here
} *alias_set_entry;
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:715:1: error: use of undeclared identifier 'alias_set_entry_0'; did you mean 'alias_set_entry'?
alias_set_entry_0 v4; // rax 
^~~~~~~~~~~~~~~~~
alias_set_entry
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:714:19: note: 'alias_set_entry' declared here
alias_set_entry_0 alias_set_entry; // rax 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:715:1: error: must use 'struct' tag to refer to type 'alias_set_entry'
alias_set_entry_0 v4; // rax 
^
struct 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:714:19: note: struct 'alias_set_entry' is hidden by a non-type declaration of 'alias_set_entry' here
alias_set_entry_0 alias_set_entry; // rax 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:724:25: error: expected identifier or '('
 struct alias_set_entry = get_alias_set_entry( set1); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:727:4: error: assigning to 'struct alias_set_entry' from incompatible type 'alias_set_entry' (aka 'struct alias_set_entry *'); dereference with *
v4 = get_alias_set_entry( set2); 
   ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~
     *
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:728:6: error: invalid argument type 'struct alias_set_entry' to unary expression
if ( !v4 || !v4->has_zero_child && !splay_tree_lookup( v4->children, set1) ) 
     ^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:728:16: error: member reference type 'struct alias_set_entry' is not a pointer; did you mean to use '.'?
if ( !v4 || !v4->has_zero_child && !splay_tree_lookup( v4->children, set1) ) 
             ~~^~
               .
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/alias.c:728:58: error: member reference type 'struct alias_set_entry' is not a pointer; did you mean to use '.'?
if ( !v4 || !v4->has_zero_child && !splay_tree_lookup( v4->children, set1) ) 
                                                       ~~^~
                                                         .
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alias_sets_conflict_p/src/obj/alias.o] Error 1
